changelogs/2.0.0/CHANGELOG.md
# Changelog

## 2.0.0 (2024-04-01)

#### New Features

* Improve home page
* switch BASE_URL
* add commented line for production deployment
* password recovery
* Add start/end dates and prevent date overlaps in EmployeeWorkService
* Recommendation letter test
* Add my recommendation letters view
* Add recommendation letter form
* List services employees
* Add payment gateway
* Add plan changing
* Changelogs automation
* Implement Plate Management
* Crud catering services
* Crud catering services
* Add recommendation letter model
* Django workflow
* Hired catering
* Add Privacy Policy and Terms and Conditions
* delete image files
* delete images files
* Delete migrations files
* New camps added to the error report form
* Send error reports
* customize event details
* customize calendar html
* customize select service
* customize events for date html
* customize reservations list
* Caterings contratados
* Caterings contratados
* Control de Pagos
* Improve upload curriculum
* Upload curriculum
* Add test case
* Css and pagination
* Add review visualization
* Add review functionality
* Caterings by location
* edit catering profile (frontend)
* Search offers from home
* catering search in home page
* menu management frontend
* list menu frontend
* list menu frontend
* Añadida acción de aplicar para ofertas
* Catering company edit test
* Edición de Perfil de Empresa (Backend)
* Add menu management feature
* Add new script for automated database migrations
* Adds possibility to view verification document
* Add minor changes in catering company verification functionality
* Implement catering company verification functionality
* Caterings filter
* Caterings filter
* Despligue aplicacion
* Busqueda caterings
* Publish and manage job offers
* Add cancellation and edition management for catering books
* Add test cases
#### Fixes

* Catering employees functionalities
* minor fix
* minor fixes
* Resolved conflicts with develop
* Correct event names in population script
* Deletes some residual prints
* Resolve an error in task employee relationship
* Fix view and add populate data
* Restricts buttom display to employees
* Resolve conflicts with develop
* delete print from views
* Eliminate button "add menu"
* fix calendar frontend
* Crud catering services
* Resolved problem in populate
* Resolve tests problems
* Resolve some tests problems
* Django Workflow fixed
* Django workflow fixed
* Django workflow fixed
* Django workflow fixed
* Django workflow fixed
* Django workflow fixed
* Django workflow fixed
* Resolve conflicts with develop
* Resolve conflicts with develop
* Conflicts with develop fixed
* Populated images have been removed
* Hired_caterings
* Caterings contratados
* All test fixed
* Gestion de Pagos
* Gestion de Pagos
* Gestion de pagos
* Gestion de pagos
* All test corrected
* Conflicts with develop resolved
* Merge with develop
* Resolve new conflicts with develop branch
* Previous selected menu will now be shown in a book edition
* Conflicts with develop resolved
* Conflicts with develop resolved
* Merge with develop
* Merge with develop
* Merge with develop
* Edit book's menus
* arreglados problemas de integración
* new tests
* test funcion
* filtrado por nombre de catering arreglado
* conflictos Merge
* code refactoring
* Changes in the html
* Resolve merge conflicts with develop branch
* Test correction
* Fixed after merge
* Editar compañia arreglado
* Arreglo de backend y formulario
* remove migrations
* merge with develop
* Caterings filter
* Deletes migrations and duplicated images
* Fix bug in register_particular url
* Fix tests
* Fix conflicts with develop
* Caterings filter
* Caterings filter
* redirect home page
* test catering hiring
* menu selection
* Update event-menu relationship and simplify models
* Busqueda de catering
* Busqueda caterings
* Listar Caterings
* Listar caterings
* lista array models
* lista array models
* migraciones
* Busqueda caterings
* arreglado estilo formulario de filtrado
* add correction 
* update Readme 2
* update Readme
* Improved management of menus, plates, and cuisine types
* Busqueda de caterings
* Busqueda de caterings
* Fixed create_offer and styles and added new module
* Publish and manage job offers
* create_offer fix, added company service id
#### Refactorings

* Eliminado archivo 0001_initial
* module organization
* Move components from the core module to respective modules
* Caterings filter
* Change module and fixed some errors
#### Others

* Password recovery tests
* Add my recommendation letters tests
* All report error's tests implemented
* creados tests para la vista de notificacion
* Book edit and cancel tests implemented
* creados tests para las funcionalidades
* Add tests for catering company verification functionality
* Catering book edit and cancel tests implemented

Full set of changes: [`1.0.0...554f0c3`](https://github.com/ISPP-GRUPO-8/BANQUETBUDDY/compare/1.0.0...554f0c3)

## 1.0.0 (2024-03-08)

#### New Features

* Add book cancellation and modification for particular users
* Add constraint validations in bookings
* Implement catering book functionality
* Listar Catering
* Listado de caterings
* user register
* User register
* User profile page
* User profile page
* Edit Profile
* Editar Perfil
* add user register frontend
* add register frontend
* Social medias
* Add logout functionality
* Add logout functionality
* Add CSS login
* Add login functionality
* Add data base
* Subscription plans
* Subscription plans
* Contact page
* Faq page completed
* FAQ page
* Created about us page
* Home page added with navbar
* Create home page header and footer
#### Fixes

* Deleted duplicated requiremtents.txt
* Posicion del footer
* Subscription-plans
* Correct logout button redirection
* home page buttons visualization
* Migrated to models from sql
* Renaming the file
#### Others

* Add login tests
* Add logout test
