changelogs/3.0.0/CHANGELOG.md
# Changelog

## 3.0.0 (2024-04-22)

#### New Features

* Despliegue S3
* added employee work history
* Email confirmation
* Add button to manually clear notifications
* test of method
* Contratación de empleados e historial de estos
* Direct Communication Employees
* Employees communication
* Client Chat
* Client Chat
* Group styles in styles.css

#### Fixes

* Settings problem solve
* Date problem solve
* Test problem solved
* Event name improve
* Event status
* Conlicts solved
* Event name shows
* Update form fix
* Allow multiple task assign
* Commented failing tests
* Booking process test
* Booking test
* (test): Comment out improperly implemented unit test
* Fixed conflicts and styles
* Fixed redirections and translated some files to english
* Booking test
* Pagination and css style
* My bookings view
* Booking process
* translated termination reasons to english
* state traduce to english
* fixed number of notifications not shown
* all not used imports removed on each file
* fixed failing tests after model changes
* UX aspects improve
* offer and job application improve
* models and populate adapt
* addapted so it can use .env file
* database password setted on environment
* Form to hire employee
* Change time zone
* Comunicacion directa
* Direct Communication Employees
* SonarCloud fix code coverage paths
* SonarCloud resolvin problems with migrate v2
* SonarCloud resolvin problems with migrate
* SonarCloud trying to debug yml
* SonarCloud removing tox.ini
* SonarCloud trying with pytest in root directory
* SonarCloud trying with pytest
* SonarCloud tryin with relative files in tox.ini
* SonarCloud modifying tox.ini
* SonarCloud trying to include coverage folder
* SonarCloud trying another way with tox
* SonarCloud trying with absolute path
* SonarCloud another solution for coverage report
* SonarCloud another try to fix path problem
* SonarCloud trying to upload coverage manually
* SonarCloud fix identation problem
* SonarCloud fix coverage paths
* SonarCloud excluding local coverage
* SonarCloud trying to exclude from gitignore
* SonarCloud folder problem fix
* SonarCloud fetch depth fix
* SonarCloud relative path problem fixed v2
* refactorizar tests de catering_employees
* refactorizar tests de catering_employees
* SonarCloud relative path problem fixed
* SonarCloud coverage improved
* SonarCloud coverage include
* add styles.css
* show plan and services button in catering company frontend
* Settings problem solve
* Date problem solve
* Test problem solved
* Event name improve
* Event status
* Conlicts solved
* Event name shows
* Update form fix
* Allow multiple task assign
* Commented failing tests
* Booking process test
* Booking test
* (test): Comment out improperly implemented unit test
* Fixed conflicts and styles
* Fixed redirections and translated some files to english
* Booking test
* Pagination and css style
* My bookings view
* Booking process
* translated termination reasons to english
* state traduce to english
* fixed number of notifications not shown
* all not used imports removed on each file
* fixed failing tests after model changes
* UX aspects improve
* offer and job application improve
* models and populate adapt
* addapted so it can use .env file
* database password setted on environment
* Form to hire employee
* Change time zone
* Comunicacion directa
* Direct Communication Employees
* SonarCloud fix code coverage paths
* SonarCloud resolvin problems with migrate v2
* SonarCloud resolvin problems with migrate
* SonarCloud trying to debug yml
* SonarCloud removing tox.ini
* SonarCloud trying with pytest in root directory
* SonarCloud trying with pytest
* SonarCloud tryin with relative files in tox.ini
* SonarCloud modifying tox.ini
* SonarCloud trying to include coverage folder
* SonarCloud trying another way with tox
* SonarCloud trying with absolute path
* SonarCloud another solution for coverage report
* SonarCloud another try to fix path problem
* SonarCloud trying to upload coverage manually
* SonarCloud fix identation problem
* SonarCloud fix coverage paths
* SonarCloud excluding local coverage
* SonarCloud trying to exclude from gitignore
* SonarCloud folder problem fix
* SonarCloud fetch depth fix
* SonarCloud relative path problem fixed v2
* refactorizar tests de catering_employees
* refactorizar tests de catering_employees
* SonarCloud relative path problem fixed
* SonarCloud coverage improved
* SonarCloud coverage include
* add styles.css
* show plan and services button in catering company frontend

Full set of changes: [`1.0.0...9bddbbc`](https://github.com/ISPP-GRUPO-8/BANQUETBUDDY/compare/1.0.0...9bddbbc)

## 2.0.0 (2024-04-01)

#### New Features

* Improve home page
* switch BASE_URL
* add commented line for production deployment
* password recovery
* Add start/end dates and prevent date overlaps in EmployeeWorkService
* Recommendation letter test
* Add my recommendation letters view
* Add recommendation letter form
* List services employees
* Add payment gateway
* Add plan changing
* customize add_plate.html and add_plate.html
* customize my plates frontend
* customize "my plates" html
* Implement Plate Management
* Crud catering services
* Crud catering services
* Add recommendation letter model
* Django workflow
* Hired catering
* Add Privacy Policy and Terms and Conditions
* delete image files
* delete images files
* Delete migrations files
* New camps added to the error report form
* Send error reports
* customize event details
* customize calendar html
* customize select service
* customize events for date html
* customize reservations list
* Caterings contratados
* Caterings contratados
* Control de Pagos
* Improve upload curriculum
* Upload curriculum
* Add test case
* Css and pagination
* Add review visualization
* Add review functionality
* Caterings by location
* edit catering profile (frontend)
* Search offers from home
* catering search in home page
* menu management frontend
* list menu frontend
* list menu frontend
* Añadida acción de aplicar para ofertas
* Catering company edit test
* Edición de Perfil de Empresa (Backend)
* Add menu management feature
* Add new script for automated database migrations
* Adds possibility to view verification document
* Add minor changes in catering company verification functionality
* Implement catering company verification functionality
* Caterings filter
* Caterings filter
* Despligue aplicacion
* Busqueda caterings
* Publish and manage job offers
* Add cancellation and edition management for catering books
* Add test cases

#### Fixes

* Catering employees functionalities
* minor fix
* minor fixes
* Resolved conflicts with develop
* Correct event names in population script
* Deletes some residual prints
* Resolve an error in task employee relationship
* Fix view and add populate data
* Restricts buttom display to employees
* Resolve conflicts with develop
* delete print from views
* Eliminate button "add menu"
* fix calendar frontend
* Crud catering services
* Resolved problem in populate
* Resolve tests problems
* Resolve some tests problems
* Django Workflow fixed
* Django workflow fixed
* Django workflow fixed
* Django workflow fixed
* Django workflow fixed
* Django workflow fixed
* Django workflow fixed
* Resolve conflicts with develop
* Resolve conflicts with develop
* Conflicts with develop fixed
* Populated images have been removed
* Hired_caterings
* Caterings contratados
* All test fixed
* Gestion de Pagos
* Gestion de Pagos
* Gestion de pagos
* Gestion de pagos
* All test corrected
* Conflicts with develop resolved
* Merge with develop
* Resolve new conflicts with develop branch
* Previous selected menu will now be shown in a book edition
* Conflicts with develop resolved
* Conflicts with develop resolved
* Merge with develop
* Merge with develop
* Merge with develop
* Edit book's menus
* arreglados problemas de integración
* new tests
* test funcion
* filtrado por nombre de catering arreglado
* conflictos Merge
* code refactoring
* Changes in the html
* Resolve merge conflicts with develop branch
* Test correction
* Fixed after merge
* Editar compañia arreglado
* Arreglo de backend y formulario
* remove migrations
* merge with develop
* Caterings filter
* Deletes migrations and duplicated images
* Fix bug in register_particular url
* Fix tests
* Fix conflicts with develop
* Caterings filter
* Caterings filter
* redirect home page
* test catering hiring
* menu selection
* Update event-menu relationship and simplify models
* Busqueda de catering
* Busqueda caterings
* Listar Caterings
* Listar caterings
* lista array models
* lista array models
* migraciones
* Busqueda caterings
* arreglado estilo formulario de filtrado
* add correction 
* update Readme 2
* update Readme
* Improved management of menus, plates, and cuisine types
* Busqueda de caterings
* Busqueda de caterings
* Fixed create_offer and styles and added new module
* Publish and manage job offers
* create_offer fix, added company service id

Full set of changes: [`1.0.0...554f0c3`](https://github.com/ISPP-GRUPO-8/BANQUETBUDDY/compare/1.0.0...554f0c3)

## 1.0.0 (2024-03-08)

#### New Features

* Add book cancellation and modification for particular users
* Add constraint validations in bookings
* Implement catering book functionality
* Listar Catering
* Listado de caterings
* user register
* User register
* User profile page
* User profile page
* Edit Profile
* Editar Perfil
* add user register frontend
* add register frontend
* Social medias
* Add logout functionality
* Add logout functionality
* Add CSS login
* Add login functionality
* Add data base
* Subscription plans
* Subscription plans
* Contact page
* Faq page completed
* FAQ page
* Created about us page
* Home page added with navbar
* Create home page header and footer

#### Fixes

* Deleted duplicated requiremtents.txt
* Posicion del footer
* Subscription-plans
* Correct logout button redirection
* home page buttons visualization
* Migrated to models from sql
* Renaming the file

#### Others

* Add login tests
* Add logout test
